# om-camera

./: CMakeLists.txt
src/: BackgroundWidget.cpp  BackgroundWidget.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraWidget.cpp  CameraWidget.h  MpvWidget.cpp  MpvWidget.h  TopLevelButton.cpp  TopLevelButton.h  ch.lindev.camera.desktop.cmake  main.cpp  qthelper.hpp
